# som-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
api/: CMakeLists.txt  api.py
api/main/: api.cpp  api.h  session.cpp  session.h  session_helper.cpp  session_helper.h
cmake/: googletest.cmake
docs/html/: annotated.html  annotated_dup.js  class_grid-members.html  class_grid.html  class_grid.js  class_rectangular-members.html  class_rectangular.html  class_rectangular.js  class_trainer-members.html  class_trainer.html  class_trainer.js  classes.html  classtrainer-members.html  classtrainer.html  classtrainer.js  config_8h.html  config_8h.js  config_8h_source.html  csv__loader_8cpp.html  csv__loader_8cpp.js  csv__loader_8h.html  csv__loader_8h.js  csv__loader_8h_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_35c063c51595aed048740f74a780093f.html  dir_35c063c51595aed048740f74a780093f.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7c4df078e98104d51399e2655943e608.html  dir_7c4df078e98104d51399e2655943e608.js  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_aebb8dcc11953d78e620bbef0b9e2183.js  dir_b73df3c68338d0823ff9d736eb268d89.html  dir_b73df3c68338d0823ff9d736eb268d89.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+36 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_3.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js
docs/latex/: annotated.tex  class_rectangular.tex  class_trainer.tex  config_8h.tex  csv__loader_8cpp.tex  csv__loader_8h.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7c4df078e98104d51399e2655943e608.tex  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  dir_b73df3c68338d0823ff9d736eb268d89.tex  files.tex  main_8cpp.tex  main_8h.tex  math__helper_8cpp.tex  math__helper_8h.tex  namespaces.tex  namespaceutils.tex  position_8h.tex  rectangular_8cpp.tex  rectangular_8h.tex  refman.tex  struct_position.tex  trainer_8cpp.tex  trainer_8h.tex
resources/: input.csv
src/: CMakeLists.txt  config.h  init.h  main.cpp  main.h
src/core/: grid.cpp  grid.h  som.cpp  som.h  trainer.cpp  trainer.h
src/grid/: grid.cpp  grid.h  rectangular.cpp  rectangular.h
src/grids/: hexagonal.cpp  hexagonal.h  rectangular.cpp  rectangular.h
src/helpers/: learning_rate.cpp  learning_rate.h  neighborhood.cpp  neighborhood.h  neighbourhood_function.cpp  neighbourhood_function.h  trainer_helper.cpp  trainer_helper.h
src/struct/: config.h  dataitem.h  node.h  position.h
src/topology/: rectangular.cpp  rectangular.h
src/utils/: arg_parser.cpp  arg_parser.h  csv_loader.cpp  csv_loader.h  math_helper.cpp  math_helper.h  trainer_helper.cpp  trainer_helper.h
test/: CMakeLists.txt  grid_test.cpp  main_test.cpp
